# roman-num

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.txt
doc/: LICENSE  dd.txt
include/: roman-num.hxx
include/roman-num/: roman-num.hxx
src/: main.cxx  roman-num.cxx
src/app/: main.cxx
src/lib/: roman-num.cxx
